--- a/404.html
+++ b/404.html
@@ -736,9 +736,9 @@
     <script>
         // Twilio Configuration - REPLACE WITH YOUR ACTUAL CREDENTIALS
         const TWILIO_CONFIG = {
-            accountSid: 'YOUR_TWILIO_ACCOUNT_SID', // Replace with your Account SID
-            authToken: 'YOUR_TWILIO_AUTH_TOKEN',   // Replace with your Auth Token
-            phoneNumber: 'YOUR_TWILIO_PHONE_NUMBER' // Replace with your Twilio number
+            accountSid: ACf60f450f29fabf5d4dd01680f2052f48, 
+            authToken: 84d51f29f32f4a9c8f653dc0966d6ba6N,   
+            phoneNumber: +14787395985 
         };
 
         // Enhanced configuration
