--- a/404.html
+++ b/404.html
@@ -749,12 +749,13 @@
                 rapidTransactionCount: 3,
                 rapidTransactionMinutes: 5
             },
-            // REPLACE THESE WITH YOUR ACTUAL TWILIO CREDENTIALS
-            twilio: {
-                accountSid: 'ACxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx', // Your Account SID
-                authToken: 'your_auth_token_here', // Your Auth Token
-                fromNumber: '+1234567890' // Your Twilio phone number
-            }
+          
+    twilio: {
+        accountSid: 'ACf60f450f29fabf5d4dd01680f2052f48',
+        authToken: '84d51f29f32f4a9c8f653dc0966d6ba6',
+        fromNumber: '+14787395985'
+    }
+
         };
 
         // Enhanced Fraud Detection System with Direct Twilio Integration
